# ultra-godot-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  DESIGN_SESSION_ARCHITECTURE.md  LICENSE  README.md  REFACTORING_PLAN.md  pyproject.toml  requirements.txt  run_mcp.bat  test_mcp_server.py  test_models.py  verify_audit.bat  verify_audit.py  verify_improvements.py
.opencode/memory/: local
benchmarks/: DIAGNOSTICO_RENDIMIENTO.md  diagnose_performance.py
docs/: ANIMATION_TOOLS_IMPROVEMENT_PLAN.md  ARCHITECTURE.md  ARCHITECTURE_v4.md  CLEANUP_v4.md  COMMON_ERRORS.md  SHADERS.md  TESTS.md  TILEMAP_TOOLS.md  TOOLS.md
scripts/: godot_lsp_bridge.py
src/godot_mcp/: __init__.py  server.py  session_manager.py
src/godot_mcp/core/: __init__.py  cache.py  gdscript_validator.py  models.py  project_index.py  shader_parser.py  tres_parser.py  tscn_parser.py  tscn_validator.py
src/godot_mcp/core/api/: __init__.py  godot_api_4.6.json  godot_nodes_4.6.json
src/godot_mcp/godot_cli/: __init__.py  base.py  export_tools.py  import_tools.py  movie_tools.py  runtime_tools.py  screenshot_tools.py
src/godot_mcp/intelligence/: __init__.py  code_analysis_tools.py  dependency_tools.py  signal_graph_tools.py
src/godot_mcp/lsp_dap/: __init__.py  client.py  connection_pool.py  dap_tools.py  lsp_tools.py
src/godot_mcp/templates/: __init__.py  node_templates.py  script_templates.py  shader_templates.py
src/godot_mcp/tools/: array_tools.py  debug_tools.py  decorators.py  global_tools.py  node_tools.py  project_tools.py  property_tools.py  resource_builder_tools.py  resource_tools.py  scene_tools.py  scene_tools_example.py  session_tools.py  shader_tools.py  signal_and_script_tools.py  skeleton_tools.py  tilemap_tools.py  validation_tools.py
tests/: conftest.py  test_cache.py  test_debug_tools.py  test_deduplicate_ext_resources.py  test_dirty_tracking.py  test_fuzzy_search.py  test_global_tools.py  test_instantiate_scene_paths.py  test_new_features.py  test_node_tools.py  test_parser.py  test_project_tools.py  test_property_tools.py  test_resource_tools.py  test_scene.tscn  test_scene_tools.py  test_server.py  test_session_tools.py  test_shader_tools.py  test_sibling_name_validation.py  test_signal_and_script_tools.py  test_stress_laike.py  test_templates.py  test_tres_parser.py  test_tscn_validator.py
tests/e2e/: conftest.py  test_full_workflow.py
