[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "godot-mcp"
version = "2.0.0"
description = "Ultra-fast MCP server for Godot Engine with native TSCN parsing"
authors = [
    {name = "Lenin Iberofono", email = "lenin@iberofono.org"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.4.0",
    "jinja2>=3.1.0",
    "watchdog>=3.0.0",
    "fuzzywuzzy>=0.18.0",
    "pydantic>=2.0.0",
    "python-Levenshtein>=0.21.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "ruff",
    "mypy"
]

[project.scripts]
godot-mcp = "godot_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/godot_mcp"]